feat(localnet): add endpoints to control time
